src/components/reply-modal/reply-modal.module.css
.container {
  position: fixed;
  display: block;
  padding: 2px;
  font-size: 10pt;
  border-left: none;
  border-top: none;
  z-index: 999;
  background-color: var(--challenge-modal-background-color);
  border: var(--challenge-modal-border);
}

.title {
  font-size: var(--challenge-modal-title-font-size);
  text-align: center;
  margin-bottom: 1px;
  padding: 0;
  height: 18px;
  line-height: 18px;
  cursor: move;
  font-weight: var(--challenge-modal-title-font-weight);
  background-color: var(--challenge-modal-title-background-color);
  color: var(--challenge-modal-title-text-color);
  border: var(--challenge-modal-title-border);
  user-select: none;
  -webkit-user-select: none;
  touch-action: none;
}

.closeIcon {
  all: unset;
  float: right;
  cursor: pointer;
  margin-bottom: -4px;
  width: 18px;
  height: 18px;
  border: none;
  image-rendering: pixelated;
  background-image: var(--close-button-background-image);
}

.container input[type="text"], .container textarea {
  border: var(--reply-modal-field-input-border, revert);
  font-family: var(--post-form-field-font-family, revert);
  appearance: var(--post-form-field-input-appearance, revert);
  outline: var(--post-form-field-input-outline, revert);
  background-color: var(--post-form-field-input-background-color, revert);
  color: var(--post-form-field-input-color, revert);
  font-size: 10pt;
  outline: var(--post-form-field-input-outline, revert);
  width: 298px;
  padding: 2px;
  margin-bottom: 1px;
}

.container input[type="text"]:focus, .container textarea:focus {
  border: var(--reply-modal-field-input-border-focus, revert);
}

.content {
  position: relative;
}

.content textarea {
  vertical-align: top;
}

.footer {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.footer button {
  text-transform: capitalize;
  float: right;
  cursor: pointer;
}

.footer input[type="checkbox"] {
  margin: 0 3px;
  vertical-align: text-top;
}

.spoilerButton {
  display: inline-block;
  padding-top: 2px;
}

.spoilerButton label, .spoilerButton input[type="checkbox"] {
  cursor: pointer;
}

.publishButton {
  width: 75px;
  filter: var(--filter80);
}

.uploadButton {
  float: left;
  margin-right: 5px;
  white-space: nowrap;
}

.uploadButton button {
  white-space: nowrap;
}

.uploadFileName {
  display: inline-block;
  width: calc(100% - 75px);
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.uploadContainer {
  display: inline-flex;
  align-items: center;
  width: 130px;
}

.offlineBoard {
  width: 292px;
  font-family: monospace;
  background-color: #E62020;
  font-size: 12px;
  color: white;
  padding: 3px 7px 3px 5px;
  text-shadow: 0 1px rgba(0, 0, 0, 0.20);
}

@media (max-width: 640px) {
  .container {
    position: absolute;
  }

  .title {
    cursor: default;
  }

  .container input[type="text"], .container textarea {
    font-size: 16px;
  }
}

.error {
  width: 294px;
  font-family: monospace;
  background-color: #E62020;
  font-size: 12px;
  color: white;
  padding: 3px 5px;
  margin-top: 1px;
  text-shadow: 0 1px rgba(0, 0, 0, 0.20);
}

.status {
  width: 294px;
  font-family: monospace;
  background-color: rgba(0, 0, 0, 0.08);
  font-size: 12px;
  color: var(--post-link-text-color);
  padding: 3px 5px;
  margin-top: 1px;
}

